finished styling, fixed overlap on footer

--- a/fish-game/src/styles/Fish.css
+++ b/fish-game/src/styles/Fish.css
@@ -8,25 +8,28 @@
 .fishCard{
     display: block;
     margin: auto;
-    min-width: 25%;
-    max-width: 300px;
+    min-width: 33%;
+    max-width: 200px;
     height: auto;
-    
+    border-style: solid;
+    border-width: 2px;
 }
 
 .fishContainer{
     justify-self: center;
-    background-image: linear-gradient(to right, #00b4db, #0083b0);
+    background-color: white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 10px;
-    width: 80%;
+    width: fit-content;
     height: auto;
+    padding: 10px;
     background-color: white;
 }
 
 .gameBody{
     display: grid;
     justify-items: center;
+    
 }
