--- a/fish-game/src/styles/FishGameHeader.css
+++ b/fish-game/src/styles/FishGameHeader.css
@@ -1,6 +1,9 @@
 .gameHeader p{
     font-size: 30px;
+    line-height: 1;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .gameHeader .gameDescription{
